# search-engine-tool-mcp

./: .env.example  .git-submodule-backup  .gitignore  LICENSE  README.MD  README.md  README_CN.md  mcp-tools.config.json  node-mcp-adapter.js  package.json  pnpm-lock.yaml  pyproject.toml  searchEngineTool.js  searchEngineTool.test.js  searchEngines.js  test_local_extract.py
src/search_engine_tool_mcp/: __init__.py  extract.py  schemas.py  search.py  server.py
src/search_engine_tool_mcp/providers/: __init__.py  local_extract.py  searxng.py  talordata.py  tavily.py  you.py
tests/: test_extract.py  test_local_extract.py  test_providers.py  test_search.py  test_searxng.py  test_talordata.py
